# era-zkevm_circuits

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
src/: lib.rs  test_utils.rs  utils.rs
src/base_structures/decommit_query/: mod.rs
src/base_structures/memory_query/: mod.rs
src/base_structures/register/: mod.rs
src/base_structures/vm_state/: mod.rs  saved_context.rs
src/code_unpacker_sha256/: input.rs  mod.rs
src/demux_log_queue/: input.rs  mod.rs
src/ecrecover/: baseline.rs  decomp_table.rs  mod.rs  naf_abs_div2_table.rs  new_optimized.rs
src/ecrecover/secp256k1/: fixed_base_mul_table.rs  fr.rs  mod.rs
src/eip_4844/: input.rs  mod.rs
src/fsm_input_output/: mod.rs
src/keccak256_round_function/: input.rs  mod.rs
src/linear_hasher/: input.rs  mod.rs
src/log_sorter/: mod.rs
src/main_vm/: cycle.rs  loading.rs  mod.rs  opcode_bitmask.rs  pre_state.rs  state_diffs.rs  utils.rs  witness_oracle.rs
src/main_vm/opcodes/: jump.rs  (+9 more)
src/ram_permutation/: mod.rs
src/recursion/: mod.rs
src/scheduler/: auxiliary.rs  input.rs  mod.rs
src/secp256r1_verify/: baseline.rs  fixed_base_mul_table.rs  input.rs  mod.rs
src/sha256_round_function/: mod.rs
src/sort_decommittment_requests/: input.rs  mod.rs
src/storage_application/: mod.rs
src/storage_validity_by_grand_product/: input.rs  mod.rs  test_input.rs
src/tables/: bitshift.rs  call_costs_and_stipends.rs  integer_to_boolean_mask.rs  mod.rs  pubdata_cost_validity.rs  test_bit.rs  uma_ptr_read_cleanup.rs
src/transient_storage_validity_by_grand_product/: input.rs  mod.rs
(+16 files in other folders)
