[package]
name = "zkevm_circuits"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.4"
smallvec = { version = "*", features = [
    "const_generics",
    "const_new",
    "serde",
] }
arrayvec = "0.7"
zkevm_opcode_defs = {git = "https://github.com/matter-labs/era-zkevm_opcode_defs.git", branch = "v1.5.0"}
# zkevm_opcode_defs = {path = "../era-zkevm_opcode_defs"}
cs_derive = { git = "https://github.com/matter-labs/era-boojum.git", branch = "main" }
boojum = {git = "https://github.com/matter-labs/era-boojum.git", branch = "main"}
# cs_derive = { path = "../era-boojum/cs_derive" }
# boojum = { path = "../era-boojum" }
itertools = "0.10"
rand_new = { package = "rand", version = "0.8" }
hex = "*"
seq-macro = "0.3"

[features]
default = []
log_tracing = ["boojum/log_tracing"]
verbose_circuits = []

[dev-dependencies]
hex = "*"
